# insider

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  sonar-project.properties
.agents/skills/analyze/: SKILL.md
.claude/skills/analyze/: SKILL.md
.claude/skills/log-issue/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: sonarcloud.yml
docs/: script.md  sonarqube-issues-log.md
docs/requirements/: api-spec.md  data-model.md  overview.md  user-stories.md
docs/tasks/: analytics-export-endpoints.md
prototypes/java-spring/: .gitignore  pom.xml
prototypes/java-spring/src/main/java/com/insider/: InsiderApplication.java
prototypes/java-spring/src/main/java/com/insider/config/: DataInitializer.java  SecurityConfig.java
prototypes/java-spring/src/main/java/com/insider/controller/: AuthController.java  (+3 more)
prototypes/java-spring/src/main/resources/: application.yml
prototypes/java-spring/src/test/resources/: application-test.yml
prototypes/python-fastapi/: pyproject.toml  requirements.txt
prototypes/python-fastapi/app/: correlation.py  database.py  db_models.py  db_repository.py  dependencies.py  logging_config.py  main.py  middleware.py  models.py  repository.py  schemas.py  security.py  seed.py  user_repository.py
prototypes/python-fastapi/app/routers/: auth.py  users.py
prototypes/python-fastapi/tests/: conftest.py  test_api_insights.py  test_auth.py  test_correlation.py  test_database.py  test_logging_config.py  test_middleware.py  test_models.py  test_security.py  test_user_repository.py  test_users.py
(+32 files in other folders)
